@@ -228,6 +228,12 @@
 			<artifactId>javafaker</artifactId>
 			<version>1.0.2</version>
 		</dependency>
+		<dependency>
+			<groupId>com.shazam</groupId>
+			<artifactId>shazamcrest</artifactId>
+			<version>0.11</version>
+			<scope>test</scope>
+		</dependency>
 		<!--<dependency>
 		    <groupId>com.dustinredmond.fxtrayicon</groupId>
 		    <artifactId>FXTrayIcon</artifactId>
@@ -290,6 +296,7 @@
 						--add-opens fx/org.unigrid.janus.model=jakarta.xml.bind
 						--add-opens fx/org.unigrid.janus.model=jersey-client
 						--add-opens fx/org.unigrid.janus.model.entity=jersey-client
+						--add-opens fx/org.unigrid.janus.model.producer=weld.core.impl
 						--add-opens fx/org.unigrid.janus.view.backing=weld.core.impl
 						--add-exports fx/org.unigrid.janus.cdi=ALL-UNNAMED
 						--add-exports fx/org.unigrid.janus.controller.component=ALL-UNNAMED
